--- a/battle_config.json
+++ b/battle_config.json
@@ -1,21 +1,4 @@
 {
-  "B": [
-    7,
-    8,
-    6
-  ],
-  "PlayerSkills": [
-    [
-      6,
-      2
-    ],
-    [
-      2,
-      0
-    ],
-    [
-      4,
-      1
-    ]
-  ]
+"B":[11,13,9,15],
+  "PlayerSkills":[[8,4],[2,0],[4,2],[6,3]]
 }
