--- a/battle_config.json
+++ b/battle_config.json
@@ -1,4 +1,30 @@
 {
-"B":[11,13,9,15],
-  "PlayerSkills":[[8,4],[2,0],[4,2],[6,3]]
+  "B": [
+    19,
+    17,
+    14,
+    18
+  ],
+  "PlayerSkills": [
+    [
+      6,
+      2
+    ],
+    [
+      9,
+      5
+    ],
+    [
+      5,
+      3
+    ],
+    [
+      4,
+      3
+    ],
+    [
+      2,
+      0
+    ]
+  ]
 }
